--- a/management-system-frontend/package.json
+++ b/management-system-frontend/package.json
@@ -26,6 +26,7 @@
     "@tabler/icons-react": "^3.0.1",
     "autoprefixer": "^10.4.18",
     "react": "^18.2.0",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
